--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -61,7 +61,6 @@
     -ms-flex-pack: center;
     justify-content: center;
     border-bottom: 1px solid #dee2e6;
-    margin-bottom: 30px;
 }
 .event-schedule-area-two ul.custom-tab li {
     margin-right: 70px;
@@ -95,113 +94,11 @@
     color: #4125dd;
 }
 
-.event-schedule-area-two .primary-btn {
-    margin-top: 40px;
-}
-
-.event-schedule-area-two .tab-content .table {
-    -webkit-box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
-    margin-bottom: 0;
-}
-.event-schedule-area-two .tab-content .table thead {
-    background-color: #007bff;
-    color: #fff;
-    font-size: 20px;
-}
-.event-schedule-area-two .tab-content .table thead tr th {
-    padding: 20px;
-    border: 0;
-}
-.event-schedule-area-two .tab-content .table tbody {
-    background: #fff;
-}
-.event-schedule-area-two .tab-content .table tbody tr.inner-box {
-    border-bottom: 1px solid #dee2e6;
-}
-.event-schedule-area-two .tab-content .table tbody tr th {
-    border: 0;
-    padding: 30px 20px;
-    vertical-align: middle;
-}
-.event-schedule-area-two .tab-content .table tbody tr th .event-date {
-    color: #252525;
-    text-align: center;
-}
-.event-schedule-area-two .tab-content .table tbody tr th .event-date span {
-    font-size: 50px;
-    line-height: 50px;
-    font-weight: normal;
-}
-.event-schedule-area-two .tab-content .table tbody tr td {
-    padding: 30px 20px;
-    vertical-align: middle;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .r-no span {
-    color: #252525;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap h3 a {
-    font-size: 20px;
-    line-height: 20px;
-    color: #cf057c;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    transition: all 0.4s;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap h3 a:hover {
-    color: #4125dd;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .categories {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    margin: 10px 0;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .categories a {
-    color: #252525;
-    font-size: 16px;
-    margin-left: 10px;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    transition: all 0.4s;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .categories a:before {
-    content: "\f07b";
-    font-family: fontawesome, serif;
-    padding-right: 5px;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .time span {
-    color: #252525;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .organizers {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    margin: 10px 0;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .organizers a {
-    color: #4125dd;
-    font-size: 16px;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    transition: all 0.4s;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .organizers a:hover {
-    color: #4125dd;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .organizers a:before {
-    content: "\f007";
-    font-family: fontawesome, serif;
-    padding-right: 5px;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .primary-btn {
-    margin-top: 0;
-    text-align: center;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-img img {
-    width: 100px;
+.book-image {
+    width: auto;
     height: 100px;
     border-radius: 8px;
+    margin-left: 80px;
 }
 
 .login-image {
@@ -219,4 +116,54 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+
+.add-book-button {
+    position: relative;
+    cursor: pointer;
+}
+
+.add-book-button-image:hover {
+    opacity: 0.8;
+}
+
+.add-book-button-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    border-radius: 30px;
+}
+
+.add-book-button-text {
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.add-book-button:hover .add-book-button-overlay {
+    opacity: 1;
+}
+
+.plus-character {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+}
+
+.add-book-button:hover .plus-character {
+    opacity: 0;
 }
